--- a/index.html
+++ b/index.html
@@ -1,13 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Dev.to</title>
 </head>
+
 <body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <aside class="aside-right-homepage">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="card bg-card" style="width: 20rem;">
+                        <a href="#">
+                            <img class="card-img-top block w-100 h-auto radius-default"
+                                src="https://res.cloudinary.com/practicaldev/image/fetch/s--Qnexldaj--/c_limit,f_auto,fl_progressive,q_auto,w_500/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/7brex760nh4niita1b8j.jpg"
+                                width="1000" height="420">
+                        </a>
+                        <div class="card-header bg-card">
+                            <h5 class="card-title fw-bold"><a href="#">Linode + DEV Hackathon (7)</a></h5>
+                        </div>
+                        <div class="card-body">
+                            <div class="card-text">
+                                <a href="#">
+                                    <p>Linode + DEV Hackathon</p>
+                                </a>
+                                <a href="#">
+                                    <p>Linode + DEV Hackathon</p>
+                                </a>
+                                <a href="#">
+                                    <p>Announcing the Linode + DEV Hackathon!</p>
+                                </a>
+                                <a href="#">
+                                    <p>Community Discussion Thread -- Linode + DEV Hachathon</p>
+                                </a>
+                                <a href="#">
+                                    <p>Unique Project Ideas for the Linode + DEV Hackathon</p>
+                                </a>
+                            </div>
+                            <div class="d-grid gap-2">
+                                <a href="#" class="btn btn-principal">Share your project</a>
+                                <a href="#" class="btn btn-gray">See all posts</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="card bg-card" style="width: 20rem;">
+                        <div class="card-header d-flex justify-content-between bg-card">
+                            <h5 class="card-title fw-bold d-flex"><a href="#">Listings</a></h5>
+                            <h6 class="card-subtitle text-principal d-flex align-self-center">See all</h6>
+                        </div>
+                        <div class="card-body">
+                            <div class="card-text">
+                                <a href="#">
+                                    <p>Need elite engineering talent for hire?</p>
+                                </a>
+                                <p class="category text-muted">forhire</p>
+                                <a href="#">
+                                    <p>Product Focused Principal Front End Engineer</p>
+                                </a>
+                                <p class="category text-muted">forhire</p>
+                                <a href="#">
+                                    <p>Cyber Security Competition "VU Cyberthon 2023"</p>
+                                </a>
+                                <p class="category text-muted">events</p>
+                                <a href="#">
+                                    <p>Content Writer and Social Media Manager</p>
+                                </a>
+                                <p class="category text-muted">forhire</p>
+                                <a href="#">
+                                    <p>Exciting news for Snowflake users! ❄️🎉</p>
+                                </a>
+                                <p class="category text-muted">products</p>
+                                <a class="d-flex justify-content-center" href="#" style="font-size: 0.9rem;">Create a
+                                    Listing</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12">
+                <div class="card bg-card" style="width: 20rem;">
+                    <div class="card-header bg-card">
+                        <h5 class="card-title fw-bold d-flex"><a href="#">#help</a></h5>
+                    </div>
+                    <div class="card-body">
+                        <a href="#">
+                            <p>Help needed for reviewing my first Vue app</p>
+                        </a>
+                        <a class="btn btn-warning disabled p-0" role="button" aria-disabled="true"
+                            style="font-size: 0.9rem;">New</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </aside>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
