feat:Add footer's structure and styles

--- a/index.html
+++ b/index.html
@@ -102,6 +102,81 @@
         </div>
         </div>
     </aside>
+
+    <footer class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <p><a class="link-hover" href="#">DEV Community 👩‍💻👨‍💻</a>— A constructive and inclusive social
+                        network for
+                        software developers. With you every step of your journey.</p>
+                </div>
+                <div class="col-12">
+                    <ul class="d-flex justify-content-center">
+                        <li class="me-4" style="list-style-type: none">
+                            <a href="#">Home</a>
+                        </li>
+                        <li class="me-4">
+                            <a href="#">Listings</a>
+                        </li>
+                        <li class="me-4">
+                            <a href="#">Podcasts</a>
+                        </li>
+                        <li class="me-4">
+                            <a href="#">Videos</a>
+                        </li>
+                        <li class="me-4">
+                            <a href="#">Tags</a>
+                        </li>
+                        <li class="me-4">
+                            <a href="#">FAQ</a>
+                        </li>
+                        <li class="me-4">
+                            <a href="#">Forem Shop</a>
+                        </li>
+                        <li class="me-4">
+                            <a href="#">Sponsors</a>
+                        </li>
+                        <li class="me-4">
+                            <a href="#">About</a>
+                        </li>
+                        <li class="me-4">
+                            <a href="#">Contact</a>
+                        </li>
+                        <li class="me-4">
+                            <a href="#">Guides</a>
+                        </li>
+                        <li class="me-4">
+                            <a href="#">Software comparisons</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-12">
+                    <ul class="d-flex justify-content-center">
+                        <li class="me-4" style="list-style-type: none">
+                            <a href="#">Code of Conduct</a>
+                        </li>
+                        <li class="me-4">
+                            <a href="#">Privacy Policy</a>
+                        </li>
+                        <li class="me-4">
+                            <a href="#">Terms of use</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-12 text-center">
+                    <p>Built on <a class="link-hover" href="https://www.forem.com">Forem</a> — the <a class="link-hover"
+                            href="https://dev.to/t/opensource">open source</a> software
+                        that powers <a class="link-hover" href="https://dev.to">DEV</a> and other inclusive communities.
+                    </p>
+                </div>
+                <div class="col-12 text-center">
+                    <p>Made with love and <a class="link-hover" href="https://dev.to/t/rails">Ruby on Rails</a>. DEV
+                        Community 👩‍💻👨‍💻 <span title="copyright">©</span> 2016 - 2023.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
