feat:Add structure and styles of the POST's page asides

--- a/post.html
+++ b/post.html
@@ -20,23 +20,113 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-3">
-                <aside> <!--ASIDE IZQUIERDO-->
+                <aside class="aside-left-post d-block"> <!--ASIDE IZQUIERDO-->
+                    <button class="btn bg-transparent d-block">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" role="img" aria-hidden="true" id="like-icon">
+                            <path d="M21.179 12.794l.013.014L12 22l-9.192-9.192.013-.014A6.5 6.5 0 0112 3.64a6.5 6.5 0 019.179 9.154zM4.575 5.383a4.5 4.5 0 000 6.364L12 19.172l7.425-7.425a4.5 4.5 0 10-6.364-6.364L8.818 9.626 7.404 8.21l3.162-3.162a4.5 4.5 0 00-5.99.334l-.001.001z"></path>
+                        </svg>
+                        <p>18</p>
+                    </button>
+                    <button class="btn bg-transparent d-block">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" role="img" aria-hidden="true" id="comments-icon">
+                            <path d="M10 3h4a8 8 0 010 16v3.5c-5-2-12-5-12-11.5a8 8 0 018-8zm2 14h2a6 6 0 000-12h-4a6 6 0 00-6 6c0 3.61 2.462 5.966 8 8.48V17z"></path>
+                        </svg>
+                        <p>18</p>
+                    </button>
+                    <button class="btn bg-transparent d-block">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" role="img" aria-hidden="true" id="save-icon">
+                            <path d="M5 2h14a1 1 0 011 1v19.143a.5.5 0 01-.766.424L12 18.03l-7.234 4.536A.5.5 0 014 22.143V3a1 1 0 011-1zm13 2H6v15.432l6-3.761 6 3.761V4z"></path>
+                        </svg>
+                        <p>9</p>
+                    </button>
+                    <button class="btn rounded-circle bg-transparent">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" role="img" aria-labelledby="a3z47noyb2dyfxqltjym8wvugymyvj6v" aria-hidden="true" id="show-more-icon">
+                            <path d="M7 12a2 2 0 11-4 0 2 2 0 014 0zm7 0a2 2 0 11-4 0 2 2 0 014 0zm5 2a2 2 0 100-4 2 2 0 000 4z"></path></svg>
+                    </button>
                 </aside>
             </div>
+
             <div class="col-12 col-lg-6">
                 <main> <!--MAIN-->
                 </main>
             </div>
+
             <div class="col-lg-3">
-                <aside> <!--ASIDE DERECHO-->
-
+                <aside class="aside-right-post"> <!--ASIDE DERECHO-->
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="card" style="width: 20rem;">
+                                    <div class="card-body">
+                                        <a href="#" class="d-flex mb-3">
+                                            <img class="rounded d-flex" src="assets/DEV-image.webp" style="width: 50px;"
+                                                alt="">
+                                            <h5 class="d-flex align-self-end bolder ms-2">The DEV Team</h5>
+                                        </a>
+                                        <a href="#" class="btn btn-principal d-flex justify-content-center">Follow</a>
+                                        <p class="card-text">The hardworking team behind DEV ❤️</p>
+                                        <p>Want to contribute to open source and help make the DEV community stronger?
+                                        </p>
+                                        <p>The code that powers DEV is called <strong>Forem</strong> and is freely
+                                            available
+                                            on GitHub.</p>
+                                        <p>You're welcome to jump in!</p>
+                                        <a href="https://github.com/forem/forem"
+                                            class="btn btn-outline-secondary d-flex justify-content-center">Contribute
+                                            to Forem</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 mt-3">
+                                <div class="card" style="width: 20rem;">
+                                    <div class="card-body">
+                                        <div class="d-flex justify-content-between">
+                                            <h5 class="card-title fw-bold d-flex">More from<a
+                                                    class="text-principal ms-2" href="#">The DEV Team</a></h5>
+                                        </div>
+                                        <div class="card-text">
+                                            <a href="#">
+                                                <p>#DEVDiscuss: Linode + DEV Hackathon</p>
+                                            </a>
+                                            <span class="d-flex justify-content-between">
+                                                <p class="category text-muted d-inline">#devdiscuss</p>
+                                                <p class="category text-muted d-inline">#linodehackathon</p>
+                                                <p class="category text-muted d-inline">#linux</p>
+                                                <p class="category text-muted d-inline">#cloud</p>
+                                            </span>
+                                            <a href="#">
+                                                <p>#DEVDiscuss: Passwordless Authentication</p>
+                                            </a>
+                                            <span class="d-flex justify-content-between">
+                                                <p class="category text-muted d-inline">#devdiscuss</p>
+                                                <p class="category text-muted d-inline">#authentication</p>
+                                                <p class="category text-muted d-inline">#security</p>
+                                            </span>
+                                            <a href="#">
+                                                <p>#DEVDiscuss: Uses of WebAssembly</p>
+                                            </a>
+                                            <span class="d-flex justify-content-between">
+                                                <p class="category text-muted d-inline">#discuss</p>
+                                                <p class="category text-muted d-inline">#webassembly</p>
+                                                <p class="category text-muted d-inline">#devdiscuss</p>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </aside>
+            </div>
+        </div>
+    </div>
 
-    <footer class="py-5">
+    <footer class="mt-5 py-5">
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
-                    <p><a class="link-hover" href="#">DEV Community 👩‍💻👨‍💻</a>— A constructive and inclusive social
+                    <p><a class="link-hover" href="#">DEV Community 👩‍💻👨‍💻</a>— A constructive and inclusive
+                        social
                         network for
                         software developers. With you every step of your journey.</p>
                 </div>
@@ -96,7 +186,8 @@
                 <div class="col-12 text-center">
                     <p>Built on <a class="link-hover" href="https://www.forem.com">Forem</a> — the <a class="link-hover"
                             href="https://dev.to/t/opensource">open source</a> software
-                        that powers <a class="link-hover" href="https://dev.to">DEV</a> and other inclusive communities.
+                        that powers <a class="link-hover" href="https://dev.to">DEV</a> and other inclusive
+                        communities.
                     </p>
                 </div>
                 <div class="col-12 text-center">
