feat:Add Main html structure

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <header class="container fluid">
-        <nav class="d-flex"> <!--NAVBAR-->
+    <header class="container">
+        <nav class="row d-flex"> <!--NAVBAR-->
             <div class="col-6">
                 <a href="/" class="site-logo" aria-label="DEV Community 👩‍💻👨‍💻 Home">
                     <img class="site-logo__img"
@@ -45,7 +45,28 @@
                 </aside>
             </div>
             <div class="col-12 col-lg-6">
-                <main> <!--MAIN-->
+                <main class="container"> <!--MAIN-->
+                    <div class="d-flex">
+                        <ul class="list-group list-group-horizontal">
+                            <li class="list-group-item">Relevant</li>
+                            <li class="list-group-item">Latest</li>
+                            <li class="list-group-item">Top</li>
+                          </ul>
+                    </div>
+                    <div class="card" style="width: 100%;">
+                        <img src="https://res.cloudinary.com/practicaldev/image/fetch/s--0YJjSZnv--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/oq1lv8jfdf929v783hyc.png"
+                            width="650" height="275" style="background-color:#dddddd;"
+                            class="crayons-article__cover__image__feed"
+                            alt="Cover image for 10 GitHub repositories to advance your career as a Developer 📚">
+                        <div class="card-body">
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores,
+                                quas..</p>
+                        </div>
+                    </div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
                 </main>
             </div>
             <div class="col-lg-3">
