feat: modified style for navbar and main

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </aside>
             </div>
             <div class="col-12 col-lg-6">
-                <main class="container w-100 "> <!--MAIN-->
+                <main class="container-fluid w-100 "> <!--MAIN-->
                     <div class="bttn-list d-flex d-none d-sm-block">
                         <ul class="list-group list-group-horizontal">
                             <li class="list-group-item">Relevant</li>
@@ -64,19 +64,19 @@
                         </div>
                         <div class="card-txt">
                             <div class="card-head d-flex ms-3 mt-3">
-                                <div class="prof-img"><img
-                                        src="https://res.cloudinary.com/practicaldev/image/fetch/s--FFw2hZyr--/c_fill,f_auto,fl_progressive,h_90,q_auto,w_90/https://dev-to-uploads.s3.amazonaws.com/uploads/user/profile_image/676134/54212bd4-07df-4510-a9f4-e78cd52194a5.jpg"
-                                        alt="iarchitsharma profile" class="rounded-circle" loading="lazy"></div>
+                                <div class="prof-imgn">
+                                    <img src="https://res.cloudinary.com/practicaldev/image/fetch/s--FFw2hZyr--/c_fill,f_auto,fl_progressive,h_90,q_auto,w_90/https://dev-to-uploads.s3.amazonaws.com/uploads/user/profile_image/676134/54212bd4-07df-4510-a9f4-e78cd52194a5.jpg"
+                                        alt="iarchitsharma profile" class="prof-img rounded-circle" loading="lazy"></div>
                                 <div class="name-date ms-3">
-                                    <h4 class="fs-5">Firstname Lastname</h4>
-                                    <h5 class="fs-6">Jan 20</h5>
+                                    <p class="fs-5">Firstname Lastname</p>
+                                    <p class="fs-6">Jan 20</p>
                                 </div>
                             </div>
                             <div class="card-body ms-4 me-1">
                                 <a href="">
                                     <h1 class="fw-bold">Lorem ipsum, dolor sit amet consectetur adipisicing..</h1>
                                 </a>
-                                <div class="hash d-flex ms-5 me-5">
+                                <div class="hash d-flex">
                                     <button type="button" class="btn btn-light me-2"><a href="#">#lorem</a></button>
                                     <button type="button" class="btn btn-light me-2"><a href="#">#ipsum</a></button>
                                     <button type="button" class="btn btn-light me-2"><a href="#">#dolor</a></button>
@@ -93,9 +93,9 @@
                                                     d="M18.884 12.595l.01.011L12 19.5l-6.894-6.894.01-.01A4.875 4.875 0 0112 5.73a4.875 4.875 0 016.884 6.865zM6.431 7.037a3.375 3.375 0 000 4.773L12 17.38l5.569-5.569a3.375 3.375 0 10-4.773-4.773L9.613 10.22l-1.06-1.062 2.371-2.372a3.375 3.375 0 00-4.492.25v.001z">
                                                 </path>
                                             </svg>
-                                            <p>199 reactions</p>
+                                            <p>199</p><p class="d-none d-sm-block">reactions</p>
                                         </div>
-                                        <div class="comment-icon d-flex">
+                                        <div class="comment-icon d-flex me-2">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" role="img"
                                                 aria-labelledby="alc3go8421s6forq0n8uac36q4uql3ut" class="crayons-icon">
                                                 <title id="alc3go8421s6forq0n8uac36q4uql3ut">Comments</title>
@@ -103,11 +103,11 @@
                                                     d="M10.5 5h3a6 6 0 110 12v2.625c-3.75-1.5-9-3.75-9-8.625a6 6 0 016-6zM12 15.5h1.5a4.501 4.501 0 001.722-8.657A4.5 4.5 0 0013.5 6.5h-3A4.5 4.5 0 006 11c0 2.707 1.846 4.475 6 6.36V15.5z">
                                                 </path>
                                             </svg>
-                                            <p>21 comments</p>
+                                            <p>21</p><p class="d-none d-sm-block">comments</p>
                                         </div>
                                     </div>
                                     <div class="icons-r d-flex justify-content-end col-6">
-                                        <div class="read-time fs-6">
+                                        <div class="read-time fs-6 d-none d-sm-block">
                                             10 min read
                                         </div>
                                         <div class="save-bttn">
